--- a/templates/training.html
+++ b/templates/training.html
@@ -115,7 +115,15 @@
                 $("#form1").show();
                 $("#formcheck").hide();
             }
+            function redirectDetect() {
+                window.location.href = '/detect';
+            }
+            function redirectVideo() {
+                window.location.href = '/video';
+            }
             $('#upload_again').on('click', viewSetupUploadAgain);
+            $('#detect').on('click', redirectDetect);
+            $('#video').on('click', redirectVideo);
         });
     </script>
 </head>
@@ -141,7 +149,8 @@
                                 <div class="col-md-7">
 
                                     <h3><strong>Upload Wanted Person Info:</strong></h3>
-                                    <p class="mb-4">Hii this is a Face Recognition technology from which you can find any
+                                    <p class="mb-4">Hii this is a Face Recognition technology from which you can find
+                                        any
                                         wanted
                                         person.
                                     </p>
@@ -168,7 +177,7 @@
                                                     </div>
                                                     <div class="form-group">
                                                         <label for="name of wanted person">Rewards(If any)</label>
-                                                        <br/>
+                                                        <br />
                                                         <input type="text" id="reward" name="reward"
                                                             placeholder="Reward Amount" />
 
@@ -176,8 +185,9 @@
 
 
                                                     <div class="form-group last mb-3">
-                                                        <button id="upload" class="btn btn-block btn-primary">Submit Report
-                                                    </button>
+                                                        <button id="upload" class="btn btn-block btn-primary">Submit
+                                                            Report
+                                                        </button>
                                                     </div>
                                                 </div>
 
@@ -185,11 +195,10 @@
 
                                             <div id="formcheck" class="row align-items-cente justify-content-center">
                                                 <button id="upload_again" class="btn btn-block btn-primary">Upload
-                                                    Another
-                                                    Person</button>
-                                                <button id="detect" class="btn btn-block btn-primary">Detect Registered Person</button>
-
+                                                    Another Person</button>
                                             </div>
+                                            <button id="detect" class="btn btn-block btn-primary">Detect Registered Person</button>
+                                            <button id="video" class="btn btn-block btn-primary">Video Surveillance</button>
                                             <p id="stats"></p>
                                         </div>
                                     </div>
